--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <a href="residential.hmtl" class="hover:text-brand-blue transition-colors">RESIDENTIAL</a>
                 <a href="commercial.hmtl" class="hover:text-brand-blue transition-colors">COMMERCIAL</a>
                 <a href="process.html" class="hover:text-brand-blue transition-colors">THE PROCESS</a>
-                <a href="#contact" class="px-6 py-2 bg-brand-blue text-white font-bold rounded shadow-md hover:bg-brand-navy transition-all">GET A QUOTE</a>
+                <a href="contact.html" class="px-6 py-2 bg-brand-blue text-white font-bold rounded shadow-md hover:bg-brand-navy transition-all">GET A QUOTE</a>
             </div>
 
             <!-- Mobile Menu Button -->
@@ -117,7 +117,7 @@
             <a href="residential.hmtl" class="hover:text-brand-blue transition-colors">Residential</a>
             <a href="commercial.hmtl" class="hover:text-brand-blue transition-colors">Commercial</a>
             <a href="process.html" class="text-2xl font-serif font-bold text-brand-navy mobile-link">Our Process</a>
-            <a href="#contact" class="px-8 py-3 bg-brand-blue text-white font-bold rounded mobile-link">Get Started</a>
+            <a href="contact.html" class="px-8 py-3 bg-brand-blue text-white font-bold rounded mobile-link">Get Started</a>
         </div>
     </nav>
 
@@ -381,7 +381,7 @@
                 <ul class="space-y-4 text-slate-500 font-semibold text-sm">
                     <li><a href="#sectors" class="hover:text-brand-blue">Residential</a></li>
                     <li><a href="#sectors" class="hover:text-brand-blue">Commercial</a></li>
-                    <li><a href="#contact" class="hover:text-brand-blue">Contact Us</a></li>
+                    <li><a href="contact.html" class="hover:text-brand-blue">Contact Us</a></li>
                 </ul>
             </div>
 
