--- a/commercial.html
+++ b/commercial.html
@@ -155,7 +155,7 @@
 
             <div class="relative fade-in-section delay-200 hidden lg:block">
                 <div class="absolute -inset-4 bg-brand-blue/10 rounded-2xl -rotate-1"></div>
-                <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Modern Office Building" class="relative rounded-2xl shadow-2xl z-10 w-full h-[600px] object-cover">
+                <img src="img3.jpg" class="relative rounded-2xl shadow-2xl z-10 w-full h-[600px] object-cover">
             </div>
         </div>
     </section>
@@ -264,8 +264,8 @@
     <section class="py-24 bg-brand-navy relative overflow-hidden">
         <div class="absolute inset-0 bg-brand-blue/5"></div>
         <div class="max-w-4xl mx-auto px-6 relative z-10 text-center fade-in-section">
-             <h2 class="font-serif text-4xl text-white font-black mb-6">Upgrade Your Business</h2>
-             <p class="text-slate-300 font-medium text-lg mb-8 max-w-2xl mx-auto">From broken windows to complete glass upgrades, our team is ready to serve your business needs.</p>
+             <h2 class="font-serif text-4xl text-white font-black mb-6">Notice!</h2>
+             <p class="text-slate-300 font-medium text-lg mb-8 max-w-2xl mx-auto">Our Commercial Services are paused! Please reach out to us about inquiries. When we resume commercial work we will reach out!</p>
              <a href="contact.html" class="inline-flex items-center py-4 px-8 bg-brand-blue text-white font-bold rounded-lg shadow-lg hover:bg-white hover:text-brand-navy transition-all">
                 Contact Us <i data-lucide="arrow-right" class="ml-2 h-5 w-5"></i>
              </a>
