--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,7 @@
 
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8 text-sm font-semibold tracking-wider text-slate-600">
-                <a href="residential.html" class="hover:text-brand-blue transition-colors">RESIDENTIAL</a>
-                <a href="commercial.html" class="hover:text-brand-blue transition-colors">COMMERCIAL</a>
+                <a href="services.html" class="hover:text-brand-blue transition-colors">SERVICES</a>
                 <a href="process.html" class="hover:text-brand-blue transition-colors">THE PROCESS</a>
                 <a href="contact.html" class="px-6 py-2 bg-brand-blue text-white font-bold rounded-lg shadow-md hover:bg-brand-navy transition-all">GET A QUOTE</a>
             </div>
@@ -101,26 +100,23 @@
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu" class="fixed inset-0 bg-white z-40 transform translate-x-full transition-transform duration-300 flex flex-col items-center justify-center gap-8 md:hidden">
             <button id="close-menu" class="absolute top-8 right-8 text-brand-navy"><i data-lucide="x" class="h-8 w-8"></i></button>
-            <a href="residential.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Residential</a>
-            <a href="commercial.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Commercial</a>
+            <a href="services.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Services</a>
             <a href="process.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Our Process</a>
             <a href="contact.html" class="px-8 py-3 bg-brand-blue text-white font-bold rounded-lg mobile-link">Get Started</a>
         </div>
     </nav>
 
     <!-- Header / Title -->
-    <section class="bg-brand-navy pt-48 pb-32 relative overflow-hidden">
-        <div class="absolute inset-0"></div>
+    <section class="relative bg-white pt-48 pb-32 overflow-hidden">
+        <img src="img8.jpg" class="absolute inset-0 h-full w-full object-cover"">
+        
         <div class="max-w-4xl mx-auto px-6 text-center relative z-10">
-            <h1 class="font-serif text-5xl md:text-6xl font-black mb-6 text-white">Get in Touch</h1>
-            <p class="text-lg md:text-xl max-w-2xl mx-auto text-white">Start your glass replacement project today. Fill out the form below or give us a call for a free estimate.</p>
+            <h1 class="font-serif text-5xl md:text-6xl font-black mb-6 text-brand-navy">Get in Touch</h1>
+            <p class="text-lg md:text-xl max-w-2xl mx-auto text-brand-navy">Start your glass replacement project today. Fill out the form below or give us a call for a free estimate.</p>
         </div>
-    </section>
-
-    <!-- Contact Form Section -->
-    <section class="py-24 bg-slate-50">
+        <div class="pt-8"></div>
         <div class="max-w-5xl mx-auto px-6">
-            <div class="bg-white rounded-2xl p-8 md:p-16 shadow-xl border border-slate-100 fade-in-section">
+            <div class="bg-white/85 backdrop-blur rounded-2xl p-8 md:p-16 shadow-xl border border-slate-100 fade-in-section">
                 
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-16">
                     <!-- Contact Info -->
@@ -212,7 +208,6 @@
                                 <div id="dropdown-options" class="hidden absolute top-full left-0 w-full mt-2 bg-white border border-slate-100 rounded-xl shadow-xl z-30 overflow-hidden transform transition-all duration-200 origin-top opacity-0 scale-95 pointer-events-none">
                                     <div class="p-1 max-h-60 overflow-y-auto">
                                         <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Residential Glass Replacement">Residential Glass Replacement</div>
-                                        <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Commercial Glass Services">Commercial Glass Services</div>
                                         <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Foggy Window Repair">Foggy Window Repair</div>
                                         <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Safety / Tempered Glass">Safety / Tempered Glass</div>
                                         <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Other / General Inquiry">Other / General Inquiry</div>
@@ -222,7 +217,7 @@
 
                             <div class="space-y-2">
                                 <label class="text-sm font-bold text-brand-navy uppercase tracking-wide">How can we help?</label>
-                                <textarea name="message" rows="4" class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-4 text-brand-navy focus:outline-none focus:border-brand-blue transition-all font-medium" placeholder="Describe your window or storefront issue..."></textarea>
+                                <textarea name="message" rows="4" class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-4 text-brand-navy focus:outline-none focus:border-brand-blue transition-all font-medium" placeholder="Describe your window issue..."></textarea>
                             </div>
 
                             <button type="submit" class="w-full py-5 bg-brand-blue text-white font-bold rounded-lg shadow-lg hover:bg-brand-navy transition-all transform hover:-translate-y-1">
@@ -251,8 +246,7 @@
             <div>
                 <h4 class="text-brand-navy font-bold mb-6 uppercase tracking-wider text-xs">Quick Links</h4>
                 <ul class="space-y-4 text-slate-500 font-semibold text-sm">
-                    <li><a href="residential.html" class="hover:text-brand-blue transition-colors">Residential</a></li>
-                    <li><a href="commercial.html" class="hover:text-brand-blue transition-colors">Commercial</a></li>
+                    <li><a href="services.html" class="hover:text-brand-blue transition-colors">Services</a></li>
                     <li><a href="process.html" class="hover:text-brand-blue transition-colors">Our Process</a></li>
                     <li><a href="contact.html" class="text-brand-blue transition-colors">Contact Us</a></li>
                 </ul>
