--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8 text-sm font-semibold tracking-wider text-slate-600">
-                <a href="residential.html" class="hover:text-brand-blue transition-colors">RESIDENTIAL</a>
-                <a href="commercial.html" class="hover:text-brand-blue transition-colors">COMMERCIAL</a>
+                <a href="services.html" class="hover:text-brand-blue transition-colors">SERVICES</a>
                 <a href="process.html" class="hover:text-brand-blue transition-colors">THE PROCESS</a>
                 <a href="contact.html" class="px-6 py-2 bg-brand-blue text-white font-bold rounded-lg shadow-md hover:bg-brand-navy transition-all">GET A QUOTE</a>
             </div>
@@ -113,8 +112,7 @@
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu" class="fixed inset-0 bg-white z-40 transform translate-x-full transition-transform duration-300 flex flex-col items-center justify-center gap-8 md:hidden">
             <button id="close-menu" class="absolute top-8 right-8 text-brand-navy"><i data-lucide="x" class="h-8 w-8"></i></button>
-            <a href="residential.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Residential</a>
-            <a href="commercial.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Commercial</a>
+            <a href="services.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Services</a>
             <a href="process.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Our Process</a>
             <a href="contact.html" class="px-8 py-3 bg-brand-blue text-white font-bold rounded-lg mobile-link">Get Started</a>
         </div>
@@ -124,9 +122,7 @@
     <section class="relative min-h-screen flex items-center overflow-hidden">
         <!-- Background Image (Absolute) -->
         <div class="absolute inset-0 z-0">
-            <img src="img1.jpg" style="transform: scaleX(-1);" class="w-full h-full object-cover" />
-            <!-- Gradient Overlay: Solid white on left, fading to transparent on right -->
-            <div class="absolute inset-0 bg-gradient-to-r from-white via-white/95 to-white/20 md:to-transparent"></div>
+            <img src="img6.jpg" alt="Modern Home with Clear Glass" class="w-full h-full object-cover" />
             <!-- Extra overlay for mobile readability -->
             <div class="absolute inset-0 bg-white/60 md:hidden"></div>
         </div>
@@ -141,7 +137,7 @@
                 </h1>
                 
                 <p class="text-slate-700 text-xl md:text-2xl font-medium mb-12 leading-relaxed max-w-xl">
-                    High-quality premium glass replacement for homes and businesses. We replace the glass inside your existing windows—saving you thousands in renovation costs.
+                    High-quality premium glass replacement for homes. We replace the glass inside your existing windows—saving you thousands in renovation costs.
                 </p>
                 
                 <div class="flex flex-col sm:flex-row gap-4">
@@ -160,40 +156,24 @@
     <section id="sectors" class="py-24 bg-slate-50">
         <div class="max-w-7xl mx-auto px-6">
             <div class="text-center max-w-3xl mx-auto mb-16 fade-in-section">
-                <h2 class="font-serif font-black text-4xl md:text-5xl text-brand-navy font-bold mb-6">Expertise for Every Property</h2>
-                <p class="text-slate-600 font-medium text-lg">Whether it's your family home or your business storefront, we bring the same level of precision and premium care to every piece of glass.</p>
+                <h2 class="font-serif font-black text-4xl md:text-5xl text-brand-navy font-bold mb-6">Expertise for Your Home</h2>
+                <p class="text-slate-600 font-medium text-lg">Whether it's your family home or investment property, we bring the same level of precision and premium care to every piece of glass.</p>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <!-- Residential Card -->
-                <a href="residential.html" class="block cursor-pointer premium-card p-10 group fade-in-section">
+            <div class="flex justify-center">
+                <!-- Services Card -->
+                <a href="services.html" class="block cursor-pointer premium-card p-10 group fade-in-section max-w-2xl w-full">
                     <div class="flex items-center gap-4 mb-6">
                         <div class="p-3 bg-brand-blue/10 text-brand-blue rounded-lg group-hover:bg-brand-blue group-hover:text-white transition-colors">
                             <i data-lucide="home" class="h-8 w-8"></i>
                         </div>
-                        <h3 class="text-3xl font-serif font-black text-brand-navy">Residential</h3>
+                        <h3 class="text-3xl font-serif font-black text-brand-navy">Services</h3>
                     </div>
                     <p class="text-slate-600 font-medium leading-relaxed mb-6">
                         We handle all household glass needs, from standard bedroom windows to large sliding patio doors. We restore thermal efficiency and curb appeal to your private residence.
                     </p>
                     <div class="text-brand-blue font-bold flex items-center gap-2">
-                        View Residential Services <i data-lucide="arrow-right" class="h-5 w-5 group-hover:translate-x-1 transition-transform"></i>
-                    </div>
-                </a>
-
-                <!-- Commercial Card -->
-                <a href="commercial.html" class="block cursor-pointer premium-card p-10 group fade-in-section delay-100">
-                    <div class="flex items-center gap-4 mb-6">
-                        <div class="p-3 bg-brand-blue/10 text-brand-blue rounded-lg group-hover:bg-brand-blue group-hover:text-white transition-colors">
-                            <i data-lucide="building-2" class="h-8 w-8"></i>
-                        </div>
-                        <h3 class="text-3xl font-serif font-black text-brand-navy">Commercial</h3>
-                    </div>
-                    <p class="text-slate-600 font-medium leading-relaxed mb-6">
-                        Serving local businesses, offices, and retail spaces. We replace window units and storefront glass efficiently to ensure your business remains secure and inviting.
-                    </p>
-                    <div class="text-brand-blue font-bold flex items-center gap-2">
-                        View Commercial Services <i data-lucide="arrow-right" class="h-5 w-5 group-hover:translate-x-1 transition-transform"></i>
+                        View Services <i data-lucide="arrow-right" class="h-5 w-5 group-hover:translate-x-1 transition-transform"></i>
                     </div>
                 </a>
             </div>
@@ -221,9 +201,6 @@
                             </div>
                             <div class="flex items-center gap-3 font-semibold text-slate-700">
                                 <i data-lucide="check" class="h-5 w-5 text-brand-blue"></i> Faded or Discolored Glass
-                            </div>
-                            <div class="flex items-center gap-3 font-semibold text-slate-700">
-                                <i data-lucide="check" class="h-5 w-5 text-brand-blue"></i> Storefront & Display Glass
                             </div>
                         </div>
                     </div>
@@ -314,7 +291,7 @@
     <section class="py-24 bg-slate-50 relative overflow-hidden">
         <div class="max-w-4xl mx-auto px-6 relative z-10 text-center fade-in-section">
              <h2 class="font-serif text-4xl text-brand-navy font-black mb-6">Ready to Clear Things Up?</h2>
-             <p class="text-slate-600 font-medium text-lg mb-8 max-w-2xl mx-auto">Get a free, no-obligation estimate for your home or business. Our team is ready to help you see the difference.</p>
+             <p class="text-slate-600 font-medium text-lg mb-8 max-w-2xl mx-auto">Get a free, no-obligation estimate for your home. Our team is ready to help you see the difference.</p>
              <a href="contact.html" class="inline-flex items-center py-4 px-8 bg-brand-blue text-white font-bold rounded-lg shadow-lg hover:bg-brand-navy transition-all">
                 Contact Us Today <i data-lucide="arrow-right" class="ml-2 h-5 w-5"></i>
              </a>
@@ -337,8 +314,7 @@
             <div>
                 <h4 class="text-brand-navy font-bold mb-6 uppercase tracking-wider text-xs">Quick Links</h4>
                 <ul class="space-y-4 text-slate-500 font-semibold text-sm">
-                    <li><a href="residential.html" class="hover:text-brand-blue transition-colors">Residential</a></li>
-                    <li><a href="commercial.html" class="hover:text-brand-blue transition-colors">Commercial</a></li>
+                    <li><a href="services.html" class="hover:text-brand-blue transition-colors">Services</a></li>
                     <li><a href="process.html" class="hover:text-brand-blue transition-colors">Our Process</a></li>
                     <li><a href="contact.html" class="hover:text-brand-blue transition-colors">Contact Us</a></li>
                 </ul>
