--- a/process.html
+++ b/process.html
@@ -117,8 +117,7 @@
 
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8 text-sm font-semibold tracking-wider text-slate-600">
-                <a href="residential.html" class="hover:text-brand-blue transition-colors">RESIDENTIAL</a>
-                <a href="commercial.html" class="hover:text-brand-blue transition-colors">COMMERCIAL</a>
+                <a href="services.html" class="hover:text-brand-blue transition-colors">SERVICES</a>
                 <a href="process.html" class="text-brand-blue transition-colors">THE PROCESS</a>
                 <a href="contact.html" class="px-6 py-2 bg-brand-blue text-white font-bold rounded-lg shadow-md hover:bg-brand-navy transition-all">GET A QUOTE</a>
             </div>
@@ -132,17 +131,16 @@
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu" class="fixed inset-0 bg-white z-40 transform translate-x-full transition-transform duration-300 flex flex-col items-center justify-center gap-8 md:hidden">
             <button id="close-menu" class="absolute top-8 right-8 text-brand-navy"><i data-lucide="x" class="h-8 w-8"></i></button>
-            <a href="residential.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Residential</a>
-            <a href="commercial.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Commercial</a>
+            <a href="services.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Services</a>
             <a href="process.html" class="text-2xl font-serif font-bold text-brand-blue mobile-link">Our Process</a>
             <a href="contact.html" class="px-8 py-3 bg-brand-blue text-white font-bold rounded-lg mobile-link">Get Started</a>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <section class="relative min-h-[60vh] flex items-center justify-center overflow-hidden pt-32 pb-20">
+    <section class="relative min-h-screen flex items-center justify-center overflow-hidden pt-32 pb-20">
         <!-- Decoration -->
-        <div class="absolute bottom-0 translate-y-1/2 w-[1500px] h-[100px] bg-sky-500/50 rounded-full blur-3xl"></div>
+        <img src="img7.jpg" style="width:50%; position:absolute;" class="bottom-0">
 
         <div class="relative z-10 max-w-5xl mx-auto px-6 text-center fade-in-section">
             <p class="text-brand-blue tracking-[0.2em] uppercase text-sm mb-4 font-bold">Transparency at Every Step</p>
@@ -388,9 +386,6 @@
                                 <i data-lucide="chevron-down" class="h-5 w-5 text-brand-blue"></i>
                             </span>
                         </summary>
-                        <p class="text-slate-600 mt-4 leading-relaxed font-medium">
-                            Absolutely. We provide a 10-year warranty against seal failure (foggy glass) on all our insulated glass units.
-                        </p>
                     </details>
                 </div>
             </div>
@@ -425,8 +420,7 @@
             <div>
                 <h4 class="text-brand-navy font-bold mb-6 uppercase tracking-wider text-xs">Quick Links</h4>
                 <ul class="space-y-4 text-slate-500 font-semibold text-sm">
-                    <li><a href="residential.html" class="hover:text-brand-blue transition-colors">Residential</a></li>
-                    <li><a href="commercial.html" class="hover:text-brand-blue transition-colors">Commercial</a></li>
+                    <li><a href="services.html" class="hover:text-brand-blue transition-colors">Services</a></li>
                     <li><a href="process.html" class="text-brand-blue transition-colors">Our Process</a></li>
                     <li><a href="contact.html" class="hover:text-brand-blue transition-colors">Contact Us</a></li>
                 </ul>
